--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <!--
+    <div id="main">
+      <h1 id="title">Name of a Person</h1>
 
-    Hello Camper!
+      <div id="img-div">
+        <img id="image" src="https://picsum.photos/200/300" alt="">
+      </div>
+      <div id="img-caption">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem distinctio consequatur autem, quod neque nesciunt numquam voluptatem expedita? Eos magnam delectus dolore optio autem sequi sunt at blanditiis! Dolorem, illum.</p>
+      </div>
 
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
+    </div>
     <script  src="js/index.js"></script>
   </body>
 </html>
