--- a/index.html
+++ b/index.html
@@ -2,22 +2,44 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <title>Tribute Page</title>
     <link rel="stylesheet" href="css/style.css">
+    <style>
+
+      #img-div{
+        width: 300px;
+      }
+
+      #image {
+        width: 100%;
+        max-width: 100%;
+        height: auto;
+        text-align: center;
+        display: block;
+      }
+    </style>
   </head>
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <div id="main">
-      <h1 id="title">Name of a Person</h1>
+      <h1 id="title">Gods creation tribute page</h1>
 
       <div id="img-div">
         <img id="image" src="https://picsum.photos/200/300" alt="">
+
+        <div id="img-caption">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem distinctio consequatur autem, quod neque nesciunt numquam voluptatem expedita? Eos magnam delectus dolore optio autem sequi sunt at blanditiis! Dolorem, illum.</p>
+        </div>
       </div>
-      <div id="img-caption">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem distinctio consequatur autem, quod neque nesciunt numquam voluptatem expedita? Eos magnam delectus dolore optio autem sequi sunt at blanditiis! Dolorem, illum.</p>
+
+      <div id="tribute-info">
+        This is more information to whom it may concern
       </div>
+
+      <a id="tribute-link" target="_blank" href="https://www.gcu.edu/blog/spiritual-life/weekly-devotional-beauty-gods-creation">The Beauty of God’s Creation
+      </a>
 
     </div>
     <script  src="js/index.js"></script>
